Repositorio online creado

--- a/latex/git.tex
+++ b/latex/git.tex
@@ -22,5 +22,11 @@ Se pide definir dos tags y se deja a criterio del estudiante en qué momento del
 Se pide crear un repositorio público en GitHub que se llame \texttt{pcd\_entregable2\_alejandro} (en mi caso).
 
 \begin{center}
-    \textbf{TODO}
+    \includegraphics[width=0.7\textwidth]{img/creacion-repositorio-online.png}
+\end{center}
+
+Para enlazar el repositorio local y el online se ha utlizado el siguiente comando:
+
+\begin{center}
+    \includegraphics[width=0.7\textwidth]{img/repositorio-local-origin.png}
 \end{center}
