--- a/latex/github.tex
+++ b/latex/github.tex
@@ -5,3 +5,9 @@ En esta sección se pide indicar la url del repositorio en github generado. El r
 \begin{center}
     \url{https://github.com/aleferu/pcd_entregable2_alejandro/}
 \end{center}
+
+Su estado inicial era:
+
+\begin{center}
+    \includegraphics[width=0.7\textwidth]{img/repositorio-online-creado.png}
+\end{center}
