--- a/latex/git.tex
+++ b/latex/git.tex
@@ -6,15 +6,19 @@ En esta sección se pide que se añadan capturas de pantalla mostrando los coman
 
 Se pide definir dos tags y se deja a criterio del estudiante en qué momento del proyecto realizarlos.
 
-\begin{itemize}
-    \item Primer tag. \textbf{TODO}.
+\begin{enumerate}
+    \item El primer tag se ha creado cuando se ha conseguido una versión usable del código por primera vez. Se ha llamado \texttt{1.0}.
+
+    \begin{center}
+        \includegraphics[width=0.90\textwidth]{img/tag1.png}
+    \end{center}
 
     \item El segundo tag se ha creado cuando he terminado todo y estaba a punto de prepararlo todo para la entrega. Lo he llamado \texttt{entrega}.
 
     \begin{center}
         \textbf{TODO}
     \end{center}
-\end{itemize}
+\end{enumerate}
 
 
 \subsection{Creación de un repositorio público en GitHub}
