--- a/latex/patrones.tex
+++ b/latex/patrones.tex
@@ -36,4 +36,13 @@ Todas estas clases heredarán de una clase \texttt{ManejaTemperaturas}, clase qu
 
 \subsection{Patrón R4 - Strategy}
 
-Se pide que se deben tener diferentes estrategias para computar los estadísticos. Para la implementación, será el objeto de la clase \texttt{CalculaEstadisticos} el que se encargará de contener objetos especializados en las distintas estrategias de cálculo de estadísticos. Estos objetos especializados en las distintas estrategias serán todas instancias de clases que heredan de \texttt{CalculadoraEstadistico}.
+Se pide que se deben tener diferentes estrategias para computar los estadísticos. Para la implementación, será el objeto de la clase \texttt{CalculaEstadisticos} el que se encargará de contener objetos especializados en las distintas estrategias de cálculo de estadísticos. Estos objetos especializados en las distintas estrategias serán todas instancias de clases que heredan de \texttt{CalculadoraEstadistico}. Son:
+
+\begin{itemize}
+    \item \texttt{CalculadoraMedia}
+    \item \texttt{CalculadoraModa}
+    \item \texttt{CalculadoraMax}
+    \item \texttt{CalculadoraMin}
+    \item \texttt{CalculadoraCuasiVar}
+    \item \texttt{CalculadoraMediana}
+\end{itemize}
